refact: #28 - modify jwtUtil
modify token valid check exception handling
add method for get Authentication from token